# BuildYourBot

./: README.md  pyproject.toml
oaisamples/console_bot/: console_bot.py
oaisamples/easy_bot/: __init__.py  easy_bot.py  history_entry.py
oaisamples/prompts/: basic_summary.txt  teacher_walter.txt  teacher_walter_ascii.txt
oaisamples/streamlit_sample/: app.py  painting.py
oaisamples/streamlit_sample/.streamlit/: config.toml
